--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">PracticalTest02v9</string>
+    <string name="google_maps_api_key">AIzaSyBrdOZFVYpXh2Vp-D9jO_Lck5g7WsBjkUA</string>
 </resources>
